// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PasswordInput /> when visibility is not toggled renders correctly 1`] = `
.c4 {
  vertical-align: middle;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 8px;
}

.c2 {
  margin-bottom: 0.75rem;
  padding-right: 1rem;
  padding-left: 1rem;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  color: #323232;
  background-color: #FFFFFF;
  font-size: 1rem;
  line-height: 1.35;
  border: 2px solid;
  border-color: #DADADA;
  display: block;
  width: 100%;
  outline: 0;
  -webkit-transition: border-color 200ms ease-in;
  transition: border-color 200ms ease-in;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c2:focus {
  border-color: #8DE2E0;
}

.c2:disabled {
  opacity: 0.7;
  cursor: not-allowed;
}

.c2::-webkit-input-placeholder {
  color: #666666;
}

.c2::-moz-placeholder {
  color: #666666;
}

.c2:-ms-input-placeholder {
  color: #666666;
}

.c2::placeholder {
  color: #666666;
}

.c2::-ms-clear {
  display: none;
}

.c1 {
  position: relative;
}

.c3 {
  border: none;
  margin: 0;
  padding: 0;
  width: auto;
  overflow: visible;
  background: transparent;
  color: inherit;
  font: inherit;
  line-height: normal;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  position: absolute;
  height: 100%;
  top: 0;
  left: calc(100% - 5rem);
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c3:focus {
  outline: none;
}

.c0 {
  padding-right: 5.625rem;
  display: block;
  width: 100%;
  outline: 0;
  -webkit-transition: border-color 200ms ease-in;
  transition: border-color 200ms ease-in;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c0:focus {
  border-color: #8DE2E0;
}

.c0:disabled {
  opacity: 0.7;
  cursor: not-allowed;
}

.c0::-webkit-input-placeholder {
  color: #666666;
}

.c0::-moz-placeholder {
  color: #666666;
}

.c0:-ms-input-placeholder {
  color: #666666;
}

.c0::placeholder {
  color: #666666;
}

.c0::-ms-clear {
  display: none;
}

<Styled(Base)
  pr="5.625rem"
>
  <StyledComponent
    forwardedRef={null}
    pr="5.625rem"
  >
    <Base
      className="c0"
      pr="5.625rem"
    >
      <PasswordInput__Wrapper>
        <StyledComponent
          forwardedRef={null}
        >
          <div
            className="c1"
          >
            <PasswordInput__Input
              bg="white"
              border={2}
              borderColor="greys.alto"
              className="c0"
              color="greys.charcoal"
              fontSize="base"
              lineHeight="normal"
              mb={3}
              pr="5.625rem"
              px={4}
              py={3}
              type="password"
            >
              <StyledComponent
                bg="white"
                border={2}
                borderColor="greys.alto"
                className="c0"
                color="greys.charcoal"
                fontSize="base"
                forwardedRef={null}
                lineHeight="normal"
                mb={3}
                pr="5.625rem"
                px={4}
                py={3}
                type="password"
              >
                <StyledComponent
                  bg="white"
                  border={2}
                  borderColor="greys.alto"
                  className="c0 c2"
                  color="greys.charcoal"
                  fontSize="base"
                  lineHeight="normal"
                  mb={3}
                  pr="5.625rem"
                  px={4}
                  py={3}
                  type="password"
                >
                  <input
                    className="c0 c2"
                    type="password"
                  />
                </StyledComponent>
              </StyledComponent>
            </PasswordInput__Input>
            <PasswordInput__Toggle
              as="button"
              onClick={[Function]}
            >
              <StyledComponent
                as="button"
                forwardedRef={null}
                onClick={[Function]}
              >
                <button
                  className="c3"
                  onClick={[Function]}
                  type="button"
                >
                  <Icon
                    mr={2}
                    name="visibility"
                    size={22}
                  >
                    <StyledComponent
                      forwardedRef={null}
                      mr={2}
                      name="visibility"
                      size={22}
                    >
                      <Base
                        className="c4"
                        mr={2}
                        name="visibility"
                        size={22}
                        title={null}
                      >
                        <Icon__CleanSvg
                          className="c4"
                          fill="currentcolor"
                          height={22}
                          mr={2}
                          title="visibility"
                          viewBox="0 0 24 24"
                          width={22}
                        >
                          <StyledComponent
                            className="c4"
                            fill="currentcolor"
                            forwardedRef={null}
                            height={22}
                            mr={2}
                            title="visibility"
                            viewBox="0 0 24 24"
                            width={22}
                          >
                            <svg
                              className="c4 "
                              fill="currentcolor"
                              height={22}
                              title="visibility"
                              viewBox="0 0 24 24"
                              width={22}
                            >
                              <path
                                d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
                              />
                            </svg>
                          </StyledComponent>
                        </Icon__CleanSvg>
                      </Base>
                    </StyledComponent>
                  </Icon>
                  Show
                </button>
              </StyledComponent>
            </PasswordInput__Toggle>
          </div>
        </StyledComponent>
      </PasswordInput__Wrapper>
    </Base>
  </StyledComponent>
</Styled(Base)>
`;

exports[`<PasswordInput /> when visibility is toggled renders correctly 1`] = `
.c4 {
  vertical-align: middle;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 8px;
}

.c2 {
  margin-bottom: 0.75rem;
  padding-right: 1rem;
  padding-left: 1rem;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  color: #323232;
  background-color: #FFFFFF;
  font-size: 1rem;
  line-height: 1.35;
  border: 2px solid;
  border-color: #DADADA;
  display: block;
  width: 100%;
  outline: 0;
  -webkit-transition: border-color 200ms ease-in;
  transition: border-color 200ms ease-in;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c2:focus {
  border-color: #8DE2E0;
}

.c2:disabled {
  opacity: 0.7;
  cursor: not-allowed;
}

.c2::-webkit-input-placeholder {
  color: #666666;
}

.c2::-moz-placeholder {
  color: #666666;
}

.c2:-ms-input-placeholder {
  color: #666666;
}

.c2::placeholder {
  color: #666666;
}

.c2::-ms-clear {
  display: none;
}

.c1 {
  position: relative;
}

.c3 {
  border: none;
  margin: 0;
  padding: 0;
  width: auto;
  overflow: visible;
  background: transparent;
  color: inherit;
  font: inherit;
  line-height: normal;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  position: absolute;
  height: 100%;
  top: 0;
  left: calc(100% - 5rem);
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c3:focus {
  outline: none;
}

.c0 {
  padding-right: 5.625rem;
  display: block;
  width: 100%;
  outline: 0;
  -webkit-transition: border-color 200ms ease-in;
  transition: border-color 200ms ease-in;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c0:focus {
  border-color: #8DE2E0;
}

.c0:disabled {
  opacity: 0.7;
  cursor: not-allowed;
}

.c0::-webkit-input-placeholder {
  color: #666666;
}

.c0::-moz-placeholder {
  color: #666666;
}

.c0:-ms-input-placeholder {
  color: #666666;
}

.c0::placeholder {
  color: #666666;
}

.c0::-ms-clear {
  display: none;
}

<Styled(Base)
  pr="5.625rem"
>
  <StyledComponent
    forwardedRef={null}
    pr="5.625rem"
  >
    <Base
      className="c0"
      pr="5.625rem"
    >
      <PasswordInput__Wrapper>
        <StyledComponent
          forwardedRef={null}
        >
          <div
            className="c1"
          >
            <PasswordInput__Input
              bg="white"
              border={2}
              borderColor="greys.alto"
              className="c0"
              color="greys.charcoal"
              fontSize="base"
              lineHeight="normal"
              mb={3}
              pr="5.625rem"
              px={4}
              py={3}
              type="text"
            >
              <StyledComponent
                bg="white"
                border={2}
                borderColor="greys.alto"
                className="c0"
                color="greys.charcoal"
                fontSize="base"
                forwardedRef={null}
                lineHeight="normal"
                mb={3}
                pr="5.625rem"
                px={4}
                py={3}
                type="text"
              >
                <StyledComponent
                  bg="white"
                  border={2}
                  borderColor="greys.alto"
                  className="c0 c2"
                  color="greys.charcoal"
                  fontSize="base"
                  lineHeight="normal"
                  mb={3}
                  pr="5.625rem"
                  px={4}
                  py={3}
                  type="text"
                >
                  <input
                    className="c0 c2"
                    type="text"
                  />
                </StyledComponent>
              </StyledComponent>
            </PasswordInput__Input>
            <PasswordInput__Toggle
              as="button"
              onClick={[Function]}
            >
              <StyledComponent
                as="button"
                forwardedRef={null}
                onClick={[Function]}
              >
                <button
                  className="c3"
                  onClick={[Function]}
                  type="button"
                >
                  <Icon
                    mr={2}
                    name="visibilityOff"
                    size={22}
                  >
                    <StyledComponent
                      forwardedRef={null}
                      mr={2}
                      name="visibilityOff"
                      size={22}
                    >
                      <Base
                        className="c4"
                        mr={2}
                        name="visibilityOff"
                        size={22}
                        title={null}
                      >
                        <Icon__CleanSvg
                          className="c4"
                          fill="currentcolor"
                          height={22}
                          mr={2}
                          title="visibilityOff"
                          viewBox="0 0 24 24"
                          width={22}
                        >
                          <StyledComponent
                            className="c4"
                            fill="currentcolor"
                            forwardedRef={null}
                            height={22}
                            mr={2}
                            title="visibilityOff"
                            viewBox="0 0 24 24"
                            width={22}
                          >
                            <svg
                              className="c4 "
                              fill="currentcolor"
                              height={22}
                              title="visibilityOff"
                              viewBox="0 0 24 24"
                              width={22}
                            >
                              <path
                                d="M12 7c2.76 0 5 2.24 5 5 0 .65-.13 1.26-.36 1.83l2.92 2.92c1.51-1.26 2.7-2.89 3.43-4.75-1.73-4.39-6-7.5-11-7.5-1.4 0-2.74.25-3.98.7l2.16 2.16C10.74 7.13 11.35 7 12 7zM2 4.27l2.28 2.28.46.46A11.804 11.804 0 0 0 1 12c1.73 4.39 6 7.5 11 7.5 1.55 0 3.03-.3 4.38-.84l.42.42L19.73 22 21 20.73 3.27 3 2 4.27zM7.53 9.8l1.55 1.55c-.05.21-.08.43-.08.65 0 1.66 1.34 3 3 3 .22 0 .44-.03.65-.08l1.55 1.55c-.67.33-1.41.53-2.2.53-2.76 0-5-2.24-5-5 0-.79.2-1.53.53-2.2zm4.31-.78l3.15 3.15.02-.16c0-1.66-1.34-3-3-3l-.17.01z"
                              />
                            </svg>
                          </StyledComponent>
                        </Icon__CleanSvg>
                      </Base>
                    </StyledComponent>
                  </Icon>
                  Hide
                </button>
              </StyledComponent>
            </PasswordInput__Toggle>
          </div>
        </StyledComponent>
      </PasswordInput__Wrapper>
    </Base>
  </StyledComponent>
</Styled(Base)>
`;
